--- a/databank/trade_data/templates/trade_data/duplicate_template.html
+++ b/databank/trade_data/templates/trade_data/duplicate_template.html
@@ -2,34 +2,36 @@
 {% block content %}
 <div class="container p-2">
 
-<div class="row">
-    <div class="alert alert-danger col-8" role="alert">
-        Cannot add the following duplicate records. 
-        <a href="{% url 'download_duplicate_excel' %}" class="alert-link">Export to Excel?</a> 
-      </div>
-</div>
-    
-    
+    <div class="row">
+        <div class="alert alert-danger col-8" role="alert">
+            Cannot add the following duplicate records.
+            <a href="{% url 'download_duplicate_excel' %}" class="alert-link">Export to Excel?</a>
+        </div>
+    </div>
+
+
     <div class="row">
         <div class="col-8">
             <table class="table table-sm table-striped">
                 <thead>
                     <tr>
-                        <th class="p-2">Row </th>
-                        <th class="p-2">Country Name</th>
-                        <th class="p-2">Country Code 2</th>
-                        <th class="p-2">Country Code 3</th>
+                        <th class="p-2">Row</th>
+                        {% for key, _ in duplicate_data.0.data.items %}  
+                            <th class="p-2">{{ key|title }}</th>
+                        {% endfor %}
                     </tr>
+                    
                 </thead>
                 <tbody>
                     {% for data in duplicate_data %}
                     <tr>
                         <td>{{ data.row_index }}</td>
-                        <td>{{ data.data.Country_Name }}</td>
-                        <td>{{ data.data.Country_Code_2 }}</td>
-                        <td>{{ data.data.Country_Code_3 }}</td>
+                        {% for key, value in data.data.items %}
+                        <td>{{ value }}</td>
+                        {% endfor %}
                     </tr>
                     {% endfor %}
+
                 </tbody>
             </table>
         </div>
