--- a/databank/trade_data/templates/trade_data/duplicate_template.html
+++ b/databank/trade_data/templates/trade_data/duplicate_template.html
@@ -11,8 +11,8 @@
 
 
     <div class="row">
-        <div class="col-8">
-            <table class="table table-sm table-striped">
+        <div class="">
+            <table class="table table-responsive table-sm table-striped">
                 <thead>
                     <tr>
                         <th class="p-2">Row</th>
