--- a/databank/templates/main.html
+++ b/databank/templates/main.html
@@ -1,56 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DataBank</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://kit.fontawesome.com/01571c4cf7.js"
-      crossorigin="anonymous"
-    ></script>
 
-    <style>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DataBank</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <script src="https://kit.fontawesome.com/01571c4cf7.js" crossorigin="anonymous"></script>
 
-      .styled-link {
-        text-decoration: none;
-        color: black;
-        transition: box-shadow 0.3s;
+  <style>
+    .styled-link {
+      text-decoration: none;
+      color: black;
+      transition: box-shadow 0.3s;
+    }
+
+    .styled-link:hover {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      /* Add the shadow effect on hover */
+    }
+  </style>
+</head>
+
+<body class="bg-body-secondary">
+  {% include 'navbar.html' %}
+
+  <div class="container fw-light pt-3">
+    {% block content %} {% endblock %}
+  </div>
+  <script>
+
+    setTimeout(function () {
+      var success_message = document.getElementById('delete_selected_message');
+      if (success_message) {
+        success_message.style.transition = "opacity 2s";
+        success_message.style.opacity = '0';
+
+        setTimeout(function () {
+          success_message.style.display = 'none';
+        }, 3000);
       }
+    }, 3000);
 
-      .styled-link:hover {
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add the shadow effect on hover */
-      }
-    </style>
-  </head>
+    // Function to handle "Select All" checkbox
+    function toggleSelectAll() {
+      const checkboxes = document.querySelectorAll(".item-checkbox");
+      const selectAllCheckbox = document.getElementById("select-all");
 
-  <body class="bg-body-secondary">
-    {% include 'navbar.html' %}
+      checkboxes.forEach((checkbox) => {
+        checkbox.checked = selectAllCheckbox.checked;
+      });
+    }
 
-    <div class="container fw-light pt-3">
-      {% block content %} {% endblock %}
-    </div>
-    <script>
-      // Function to handle "Select All" checkbox
-      function toggleSelectAll() {
-        const checkboxes = document.querySelectorAll(".item-checkbox");
-        const selectAllCheckbox = document.getElementById("select-all");
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
 
-        checkboxes.forEach((checkbox) => {
-          checkbox.checked = selectAllCheckbox.checked;
-        });
-      }
-
-    </script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
